Fix responsiveness on tablets.

--- a/ui/css/main.css
+++ b/ui/css/main.css
@@ -58,7 +58,7 @@
 }
 /*when screen is less than 600px wide, hide all links except for the first one("Home"). 
 Show link that opens and closes the navbar*/
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 600px) {
     .navbar li:not(:first-child){
         display: none;
     }
@@ -83,7 +83,7 @@ Show link that opens and closes the navbar*/
     }
     /*make table behave not as a table*/
     table, thead, tbody, th, td, tr {
-      display: block; 
+      display: block;
   }
 }
 .row::before{
